# simplelocker

./: .gitignore  .gitmodules  CMakeLists.txt  DbusService.h  DbusSignalListener.h  Inhibitor.h  README.md  XIdleChecker.cpp  XIdleChecker.h  main.cpp
